<resources>
    <string name="hello">Hello World, MathMentorActivity!</string>
    <string name="app_name">Kokotoa</string>
    <string name="filename">m4bfile</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="feedback">Do you like this app so far? Please feel free to leave a comment or suggestion. Your feedback is appreciated thanks</string>
    <string name="multiplayer_feedback">Have you tried multiplayer mode? Please feel free to leave a comment or suggestion. Your feedback is appreciated thanks</string>
    <string name="view_free_offers">View Free Offers</string>
    <string name="collected">Collected</string>
    <string name="total">Total</string>
    <string name="close">Close</string>
    <string name="total_points">Total Points</string>
    <string name="you_are">You are</string>
    <string name="pts_away_from_unlock">points away from unlocking Kokotoa PRO (Math for The Brain)</string>
    <string name="unable_to_get_pts">Unable to retrieve tap points from server.</string>
    <string name="you_just_earned">"You've just earned"</string>
    <string name="get_pro_version">Get The Pro Version</string>
    <string name="personalize">Personalize</string>
    <string name="user_profiles">User Profiles</string>
    <string name="difficulty">Difficulty</string>
    <string name="browse">Browse</string>
    <string name="save">Save</string>
    <string name="eqn_set_to_default">Equation type has been set to default</string>
    <string name="game_settings">Game Settings</string>
    <string name="current">current</string>
    <string name="select_user_profile">Select User Profile</string>
    <string name="level">Level</string>
    <string name="completed_equations">Completed Equations</string>
    <string name="number_of_inc_alwd">Number of mistakes Allowed</string>
    <string name="time_is_up">Time is Up</string>
    <string name="score">Score</string>
    <string name="try_again">Try Again</string>
    <string name="complete">Complete</string>
    <string name="next">Continue</string>
    <string name="too_many_mistakes">Too Many Mistakes</string>
    <string name="not_enough_points">You do not have enough points</string>
    <string name="you_need_a_min_of">You need a minimum of</string>
    <string name="points_to_proceed">points to proceed</string>
    <string name="you_currently_have">You currently have</string>
    <string name="points">points</string>
    <string name="you_can_earn_more">You can earn more points in minute run mode</string>
    <string name="ok">OK</string>
    <string name="eqn_with_no_inc_alwd">equations with no mistakes allowed</string>
    <string name="eqn_with_max_of">equations with a maximum of</string>
    <string name="incorrects_allowed">Mistakes Allowed</string>
    <string name="you_have_to_complete">You have to complete</string>
    <string name="you_have">You have</string>
    <string name="secs_to_complete_lvl">seconds to complete this level</string>
    <string name="start">START</string>
    <string name="press_start_to_begin">Press Start to Begin</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="enter">Enter</string>
    <string name="refresh">Reload</string>
    <string name="no_internet_connection">No internet connection available</string>
    <string name="your_id_is">Your ID is</string>
    <string name="enter_opponent_id">"Enter your opponent's ID"</string>
    <string name="you_win">YOU WIN!</string>
    <string name="you_lose">YOU LOSE</string>
    <string name="play_again">Play Again</string>
    <string name="connected">Connected</string>
    <string name="waiting_for_opponent">waiting for opponent</string>
    <string name="waiting">waiting</string>
    <string name="vs">Vs</string>
    <string name="disconnected">Sorry, you have been disconnected</string>
    <string name="go">GO!</string>
    <string name="menu">Menu</string>
    <string name="brain_fact">Brain Fact</string>
    <string name="your_avg_score_is">Your Average Score is</string>
    <string name="new_highscore">NEW HIGH SCORE!</string>
    <string name="review">REVIEW</string>
    <string name="you_earned">You Earned</string>
    <string name="combo">Combo!</string>
    <string name="practice">Practice</string>
    <string name="minute_run">Minute Run</string>
    <string name="challenge">Challenge</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="settings">Settings</string>
    <string name="user_info">User Info.</string>
    <string name="exit">Exit</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome_to_m4b">Welcome to Kokotoa (math for the brain)</string>
    <string name="file_is_corrupt">File is Corrupt: Re-install the application!</string>
    <string name="leave_feedback">Give Feedback</string>
    <string name="perhaps_later">Perhaps Later</string>
    <string name="get_free_points">Get FREE points!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pro_features">"Features: 
Customizable backgrounds 
Save up to 3 user profiles
No Ads 
Unlimited Online Gameplay 
More Brain Facts"</string>
    <string name="resume_saved">Do you want to resume previous saved progress?</string>
    <string name="resume">Resume</string>
    <string name="restart">Restart</string>
    <string name="one_or_two_devices">Are you competing on 1 or 2 devices?</string>
    <string name="one_device">Single Device</string>
    <string name="two_devices">Two Devices</string>
    <string name="pro_version_unlocked">The Pro version has been unlocked!</string>
    <string name="email_subject">Kokotoa (Math for the brain) feedback</string>
    <string name="send_email_using">Send email using..</string>
    <string name="no_email_client">There are no email clients installed.</string>
    <string name="edit_user_name">Edit User Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="share">Share</string>
    <string name="get_more_points">Get More Points</string>
    <string name="reset">Reset</string>
    <string name="view_rank">View Your World Rank</string>
    <string name="top_ranked_users">User Rating</string>
    <string name="name">Name</string>
    <string name="average_score">Avg. Score</string>
    <string name="user_stats">"Current Level: 
High Score: 
Average Score: 
Total Points:"</string>
    <string name="reminder_change_name">Reminder: Change default user name</string>
    <string name="i_rank">I rank #</string>
    <string name="share_msg">" (worldwide) in Kokotoa (Math For The Brain). Can you beat my rank? Get this android app and check your world rank! "</string>
    <string name="bb_link">"http://appworld.blackberry.com/webstore/content/20484402/"</string>
    <string name="google_link">"https://play.google.com/store/apps/details?id=com.blackstar.math4brain"</string>
    <string name="amazon_link">"http://www.amazon.ca/Blackstar-Math-For-The-Brain/dp/B00DR7TK6I"</string>
    <string name="share_using">Share using..</string>
    <string name="no_name_entered">No name entered</string>
    <string name="user_name_changed">User name has been changed</string>
    <string name="your_rank">Your Rank: #</string>
    <string name="unable_to_connect">Unable to connect to the network</string>
    <string name="loading">Loading..</string>
    <string name="version_outdated">This version is outdated. Please upgrade to v</string>
    <string name="new_message">You have received a message</string>
    <string name="default_name">no name</string>
    <string name="percent_sign">"% of "</string>
    <string name="correct">Correct</string>
    <string name="wrong">wrong</string>
    <string name="all_bonus">All BONUS</string>
    <string name="notification_msg">Keep your mind sharp, exercise your brain</string>
    <string name="games_avail">games available today</string>
    <string name="last_game">This is your last game today</string>
    <string name="no_more_games">You have no more games available today. Get the pro version for unlimited gameplay</string>
    <string name="initial_try">To maintain server speed, the number of online games you can play in a day is limited. Get the pro version for unlimited gameplay</string>
    <string name="wrong_id">"You must enter your opponent's ID, not your own ID"</string>
    <string name="p1_not_ready">opponent is not ready</string>
    <string name="p1_not_found">opponent not found.</string>
    <string name="p1_not_joined">session not joined.</string>
    <string name="rate_msg">If you enjoy using Kokotoa (Math for the Brain), would you please take a moment to rate me 5 stars? Thanks for your support</string>
    <string name="rate">Rate Me</string>
    <string name="no_thanks">No thanks</string>
    <string name="breakMsg">Give your brain a break, come back later</string>
    <string name="too_easy">Higher difficulty recommended</string>
    <string name="too_difficult">Lower difficulty recommended</string>
    <string name="days">days</string>
    <string name="prog_chart">Your Progress Chart</string>
    <string name="try_challenge">Try Challenge Mode</string>
    <string name="evaluation">Evaluation</string>
    <string name="evaluation_msg">Hey, we are going to create a customized profile for you. Lets get started</string>
    <string name="enter_valid_email">Please enter a valid email address</string>
    <string name="email">email address</string>
    <string name="backup">Backup data online</string>
    <string name="restore">Restore data</string>
    <string name="backup_restore">Backup/Restore</string>
    <string name="press_to_clear">If you make a mistake, quickly remove your answer by pressing:</string>
    <string name="press_to_skip">If you do not know the answer, skip the question by pressing:</string>
    <string name="facebook_app_id">876571145821017</string>
</resources>